[gd_scene load_steps=9 format=3 uid="uid://diypynu285b7h"]

[ext_resource type="Script" path="res://scenes/player/weapons/gun/flame/flame.gd" id="1_qbfmn"]
[ext_resource type="AudioStream" uid="uid://c2rgro4hrmduo" path="res://assets/hiss_noise.wav" id="2_3o5kf"]

[sub_resource type="Gradient" id="Gradient_yn5dq"]
offsets = PackedFloat32Array(0.00666667, 0.537778)
colors = PackedColorArray(0.883409, 0.56564, 0, 1, 1, 0.462745, 0.235294, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fmnm6"]
gradient = SubResource("Gradient_yn5dq")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_yp23k"]
b = Vector2(-1.28015e-05, 9)

[sub_resource type="Curve" id="Curve_gibsx"]
min_value = -20.0
max_value = 20.0
_data = [Vector2(0, 13.2334), 0.0, 0.0, 0, 0, Vector2(0.445148, -3.37539), 0.0, 0.0, 0, 0, Vector2(0.493671, -19.9842), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_a6xkf"]
max_value = 2.0
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1e-05, 0), 0.0, 0.0, 0, 0, Vector2(0.14135, 1.38486), 0.0, 0.0, 0, 0, Vector2(0.329114, 1.39511), 0.0, 0.0, 0, 0, Vector2(0.831224, 0), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="Gradient" id="Gradient_kglda"]
offsets = PackedFloat32Array(0, 0.118834, 0.475336, 0.540359)
colors = PackedColorArray(0.576471, 0.972549, 1, 0.227451, 1, 0.642363, 0.336072, 1, 0.533333, 0.262745, 0, 1, 0, 0, 0, 0.32549)

[node name="projectile" type="Area2D"]
top_level = true
collision_layer = 32
collision_mask = 230
script = ExtResource("1_qbfmn")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(1, 0)
rotation = -1.5708
scale = Vector2(2.11639, 0.727138)
color = Color(1, 0.530813, 0.32379, 1)
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.415686)
texture = SubResource("GradientTexture2D_fmnm6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -2.27374e-13)
rotation = -1.5708
scale = Vector2(3.145, 1)
shape = SubResource("SegmentShape2D_yp23k")

[node name="GunFire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_3o5kf")

[node name="EjectParticles" type="CPUParticles2D" parent="."]
position = Vector2(5, 0)
amount = 1000
randomness = 0.4
lifetime_randomness = 0.67
emission_shape = 3
emission_rect_extents = Vector2(4, 1)
spread = 0.0
gravity = Vector2(0, -40)
initial_velocity_min = 3.0
initial_velocity_max = 5.0
damping_max = 20.0
damping_curve = SubResource("Curve_gibsx")
scale_amount_min = 0.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_a6xkf")
color_ramp = SubResource("Gradient_kglda")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
